[gd_scene load_steps=16 format=3 uid="uid://ddkdoy6glq46q"]

[ext_resource type="Script" path="res://scenes/viewsheet/FileMenu.gd" id="1_q64nq"]
[ext_resource type="ButtonGroup" uid="uid://cg5568ya0l0bq" path="res://scenes/viewsheet/select_mode_button_group.tres" id="2_y6qhu"]
[ext_resource type="Script" path="res://scenes/viewsheet/cmdCursorSelect.gd" id="3_ysw2v"]
[ext_resource type="Script" path="res://scenes/viewsheet/cmdBoxSelect.gd" id="4_tjx43"]
[ext_resource type="Script" path="res://scripts/interactive_camera_2d/InteractiveCamera2D.gd" id="5_nwr63"]
[ext_resource type="Script" path="res://scenes/viewsheet/Context.gd" id="6_dctdf"]
[ext_resource type="PackedScene" uid="uid://djdo853eakepl" path="res://components/ui/box_selector/BoxSelector.tscn" id="7_ru3b7"]
[ext_resource type="PackedScene" uid="uid://cw20yhfbqbyq5" path="res://components/ui/cursor_selector/CursorSelector.tscn" id="8_o3hnu"]
[ext_resource type="PackedScene" uid="uid://ckv6dcfw00ii0" path="res://objects/selection_element/SelectionElement.tscn" id="9_r5cn2"]

[sub_resource type="InputEventKey" id="InputEventKey_vxf30"]
device = -1
alt_pressed = true
keycode = 70

[sub_resource type="Shortcut" id="Shortcut_puwae"]
events = [SubResource("InputEventKey_vxf30")]

[sub_resource type="InputEventKey" id="InputEventKey_gu5xt"]
device = -1
keycode = 67
unicode = 99

[sub_resource type="Shortcut" id="Shortcut_xfywm"]
events = [SubResource("InputEventKey_gu5xt")]

[sub_resource type="InputEventKey" id="InputEventKey_dsie4"]
device = -1
keycode = 66
unicode = 98

[sub_resource type="Shortcut" id="Shortcut_wci4w"]
events = [SubResource("InputEventKey_dsie4")]

[node name="viewsheet" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 90.0
offset_bottom = 30.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="MenuButton" type="MenuButton" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = false
shortcut = SubResource("Shortcut_puwae")
text = "File"
item_count = 3
popup/item_0/text = "Export Packed"
popup/item_0/id = 0
popup/item_1/text = "Export As Is"
popup/item_1/id = 1
popup/item_2/text = "Quit"
popup/item_2/id = 2
script = ExtResource("1_q64nq")

[node name="SideBar" type="Panel" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 30.0
offset_right = 120.0
offset_bottom = -18.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SideBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_top = 10.0
offset_right = 44.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="cmdCursorSelect" type="Button" parent="CanvasLayer/SideBar/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_y6qhu")
shortcut = SubResource("Shortcut_xfywm")
text = "Cursor Select
"
script = ExtResource("3_ysw2v")

[node name="cmdBoxSelect" type="Button" parent="CanvasLayer/SideBar/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_y6qhu")
shortcut = SubResource("Shortcut_wci4w")
text = "Box Select
"
script = ExtResource("4_tjx43")

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
size = Vector2i(392, 162)
access = 2
filters = PackedStringArray("*.png")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("5_nwr63")

[node name="Context" type="Node2D" parent="."]
script = ExtResource("6_dctdf")

[node name="SpriteList" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="BoxSelector" parent="." node_paths=PackedStringArray("context", "selection_element") instance=ExtResource("7_ru3b7")]
process_mode = 4
context = NodePath("../Context")
selection_element = NodePath("../SelectionElement")

[node name="CursorSelector" parent="." node_paths=PackedStringArray("selection_element", "context") instance=ExtResource("8_o3hnu")]
selection_element = NodePath("../SelectionElement")
context = NodePath("../Context")

[node name="SelectionElement" parent="." instance=ExtResource("9_r5cn2")]

[connection signal="toggled" from="CanvasLayer/SideBar/VBoxContainer/cmdCursorSelect" to="CanvasLayer/SideBar/VBoxContainer/cmdCursorSelect" method="_on_toggled"]
[connection signal="toggled" from="CanvasLayer/SideBar/VBoxContainer/cmdBoxSelect" to="CanvasLayer/SideBar/VBoxContainer/cmdBoxSelect" method="_on_toggled"]
[connection signal="file_selected" from="CanvasLayer/FileDialog" to="CanvasLayer/Panel/HBoxContainer/MenuButton" method="_on_file_export_dialog_file_selected"]
